package S191220097.taskThree;

import S191220097.taskThree.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
