package S191220097.taskThree;

public interface Sorter {

    public void load(int[] elements);

    public void sort();

    public String getPlan();

}
